Remove scrollbar from jumplinks; remove scrollbar and fixed height from transcript

--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -3,8 +3,6 @@
   top: 0;
   padding: 2.5rem 0 0 1rem;
   height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
 
   &__heading {
     font-size: 2rem;
@@ -45,7 +43,6 @@
   }
 
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    overflow-y: hidden;
     height: 100%;
   }
 }
